# synapse-anti-ping

./: .dockerignore  .gitignore  .style.yapf  CONTRIBUTING.md  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
synapse_anti_ping/: __init__.py  antispam.py  config.py  matrix.py  mentions.py  offender.py  round_robin_heap.py  round_robin_list.py  spam_checker_api.py  utils.py
tests/: test_mentions.py  test_round_robin_list.py
